objects/NordicsFix__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Nordics Fix</relationshipLabel>
        <relationshipName>Nordics_Fix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HelixId__c</fullName>
        <externalId>true</externalId>
        <label>HelixId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <externalId>true</externalId>
        <label>IntegrationId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Nordics Fix (Prospect)</relationshipLabel>
        <relationshipName>Nordics_Fix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hasCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasFollowup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasFollowup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasMarketinfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasMarketinfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasOppty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasOppty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasQuote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasVisitreport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasVisitreport</label>
        <type>Checkbox</type>
    </fields>
    <label>Nordics Fix</label>
    <nameField>
        <displayFormat>FIX-{000000}</displayFormat>
        <label>Nordics Fix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nordics Fix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>